# Supersonic

./: .clangd  .gitignore  CMakeLists.txt  Dockerfile  TODO  build.sh  claude_session  implement.md  profile.cu  profile.sh  run.sh  setup.py  setup.sh  step.cpp  test.cpp  test.py  test.sh  todo.md
.docs/: Collision_Optimizations.md  Implementation_Checklist.md  RocketSim_Physics_Recreation_Guide.md  collision-optimization-plan.md
include/: ArenaMesh.cuh  Ball.h  BroadPhaseGrid.cuh  CarArenaCollision.cuh  CarControls.hpp  Collisions.hpp  CollisionsEdge.hpp  CollisionsFace.hpp  CollisionsSAT.hpp  Constants.h  CudaCommon.cuh  CudaCommon.h  CudaCommon.hpp  CudaKernels.cuh  CudaKernels.hpp  CudaMath.cuh  CudaMath.h  CudaMath.hpp  CudaUtils.cuh  CudaUtils.hpp  DeviceArray.cuh  Environment.h  GameState.cuh  GameState.hpp  GameStateDevice.cuh  InitializerKernels.cuh  LoadMeshObj.cuh  Math.cuh  MathTypes.h  Matrix.cuh  PhysicsState.h  RLConst.h  RLConstants.cuh  RLConstants.hpp  RLEnvironment.cuh  RLEnvironment.hpp  ReadMeshObj.cuh  Reflection.hpp  SAT.cuh  StateReset.cuh  (+4 more)
include/bullet/: BoxShape.h  CollisionShape.h  SphereShape.h  btWheelInfo.h
include/cuda/: types.h
plugin/: CMakeLists.txt  plugin.cpp
pybind/: Supersonic.cpp
src/: AABB.cu  ArenaMesh.cu  Ball.cu  BroadPhaseGrid.cu  CollisionShape.cu  Collisions.cu  CollisionsEdge.cu  CollisionsFace.cu  CollisionsSAT.cu  CudaAngle.cu  CudaKernels.cu  CudaMath.cu  CudaRotMat.cu  CudaTransform.cu  CudaUtils.cu  CudaVec.cu  Environment.cu  GameState.cpp  GameState.cu  GameStateDevice.cu  InitializerKernels.cu  LoadMeshObj.cu  MathTypes.cu  PhysicsState.cu  RLConstants.cu  RLEnvironment.cu  StateReset.cu  TestBallBounce.cu  TestBroadPhaseGrid.cu  TestMesh.cu  TestRLEnv.cu  bindings.cpp  environment.cu  test.cu
src/cuda/: MathTypes.cu
tests/: CMakeLists.txt  benchmark_collision.cu  benchmark_scenarios.cu  test_collisions.cu  test_math.cu
